# particle-connect

./: .gitignore  LICENSE  README.md
particle-analytics-quickstarts/: .gitignore  README.md  pyproject.toml
particle-analytics-quickstarts/ddl/duckdb/: create_all.sql
particle-analytics-quickstarts/queries/bigquery/clinical/: care_team.sql  encounter_history.sql  lab_results.sql
particle-analytics-quickstarts/queries/bigquery/cross-cutting/: labs_by_encounter.sql  medications_by_problem.sql
particle-analytics-quickstarts/queries/bigquery/operational/: record_freshness.sql  source_coverage.sql
particle-analytics-quickstarts/queries/duckdb/clinical/: lab_results.sql  medication_timeline.sql
particle-analytics-quickstarts/queries/duckdb/cross-cutting/: labs_by_encounter.sql  medications_by_problem.sql
particle-analytics-quickstarts/queries/duckdb/operational/: ai_output_summary.sql
particle-analytics-quickstarts/src/observatory/: api_client.py  bq_loader.py  cli.py  loader.py  quality.py
particle-analytics-quickstarts/terraform/: iam.tf  outputs.tf  terraform.tfvars.example  variables.tf
particle-analytics-quickstarts/tests/: test_bq_loader.py  test_ddl.py  test_parser.py  test_quality.py
particle-api-quickstarts/: README.md  pyproject.toml
particle-api-quickstarts/docs/: troubleshooting.md
particle-api-quickstarts/quick-starts/curl/: manage_documents.sh  submit_document.sh
particle-api-quickstarts/quick-starts/python/: manage_documents.py  register_patient.py  signal_register_org.py  signal_subscribe.py  signal_trigger_alert.py  submit_document.py
particle-api-quickstarts/sample-data/ccda_data/: Elvira561_Valadez233_4d5df6df-06a8-4412-9ad2-b047c57c7dba4-Discharge_Summary___PCP66537___2020-08-15T151911-4___ec14d2b6-7157-4337-8961-982d5a5244ea.xml
particle-api-quickstarts/src/particle/: __init__.py
particle-api-quickstarts/src/particle/core/: __init__.py  exceptions.py  logging.py
particle-api-quickstarts/src/particle/document/: __init__.py  models.py  service.py
particle-api-quickstarts/src/particle/patient/: models.py  service.py
particle-api-quickstarts/src/particle/query/: __init__.py  service.py
particle-api-quickstarts/src/particle/signal/: __init__.py  models.py  service.py
particle-api-quickstarts/tests/: test_core_integration.py
particle-api-quickstarts/workflows/: check_setup.py  hello_particle.py  hello_particle_ccda.py  manage_documents.py  register_patient.py  retrieve_data.py  signal_end_to_end.py  signal_subscribe_patient.py  signal_trigger_alert.py  signal_webhook_receiver.py
particle-flat-observatory/: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml
particle-flat-observatory/ddl/bigquery/: create_all.sql
particle-flat-observatory/ddl/postgres/: create_all.sql
particle-flat-observatory/queries/: README.md
particle-flat-observatory/queries/bigquery/clinical/: active_problems.sql  medication_timeline.sql  patient_summary.sql  vital_sign_trends.sql
particle-flat-observatory/queries/bigquery/cross-cutting/: procedures_by_encounter.sql
particle-flat-observatory/queries/bigquery/operational/: ai_output_summary.sql  data_completeness.sql  (+1 more)
particle-flat-observatory/sample-data/: flat_data.json
particle-flat-observatory/src/observatory/: __init__.py  cli.py  config.py  ddl.py  generate_ddl.py  loader.py  normalizer.py  parser.py  schema.py
particle-flat-observatory/terraform/: iam.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
particle-flat-observatory/tests/: test_api_client.py  test_cli_api.py  test_ddl.py  test_loader.py  test_normalizer.py
particle-health-starters/: .env.example  .gitignore  README.md  pyproject.toml
particle-health-starters/notebooks/: explore_flat_data.ipynb
particle-health-starters/quick-starts/curl/: auth.sh  register_patient.sh  retrieve_data.sh  submit_query.sh
particle-health-starters/quick-starts/python/: auth.py  register_patient.py  retrieve_data.py  submit_query.py
particle-health-starters/sample-data/ccda_data/: Elvira561_Valadez233_4d5df6df-06a8-4412-9ad2-b047c57c7dba4-Encounter_Summary___PCP66537___2020-08-15T151911-4___e95591b2-aa3a-4cdc-88cd-2a9278934916.xml
particle-health-starters/src/particle/: __init__.py
particle-health-starters/tests/: test_core_integration.py
particle-health-starters/workflows/: register_patient.py  retrieve_data.py  submit_document.py  submit_query.py
(+247 files in other folders)
