[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "particle-starter"
version = "0.1.0"
description = "Python SDK and workflows for Particle Health API — clinical data retrieval (CCDA, FHIR, flat JSON), patient registration, ADT Signal events, and EHR integration via the nationwide health information exchange"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=25.0.0",
    "tenacity>=9.0.0",
    "PyJWT>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/particle"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
