[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "particle-flat-observatory"
version = "0.1.0"
description = "Data pipeline accelerator for Particle Health flat data — schema generation, normalization, and analytics"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/observatory"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
